# taxi_license_autocheck

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py  config.py
bot/db/: db.py
bot/handlers/: add.py  clean.py  delete.py  help.py  show.py  start.py
bot/services/: autocheck.py  mosreg_license.py  mosru_license.py  send_license_status_to_tg.py
bot/utils/: captcha_solver.py  check_mosreg_license.py  check_mosru_license.py
